Allow specifying alt texts for uploaded attachments